--- a/setup.cfg
+++ b/setup.cfg
@@ -2,14 +2,14 @@
 # replace with your username:
 name = pymafe
 version = 0.0.4
-author = wpkpy
-author_email = ponggung1986@example.com
-description = A Profit-Loss Analysis Tool
+author = l12203685
+author_email = l12203685@gmail.com
+description = A Trading Strategy Analysis Tool
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/ponggung/pymafe
+url = https://github.com/l12203685/pymafe
 project_urls =
-    Bug Tracker = https://github.com/ponggung/pymafe/issues
+    Bug Tracker = https://github.com/l12203685/pymafe/issues
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
